<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="9dp"
    app:cardBackgroundColor="#F6F6F6"
    app:cardCornerRadius="19dp"
    app:cardElevation="12dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewphoto"
        android:layout_width="100dp"
        android:layout_height="105dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/namePeserta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo"
        app:cardBackgroundColor="#F6F6F6"
        app:cardCornerRadius="19dp"
        app:cardElevation="12dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/namePeserta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="12dp"
        android:text="@string/textview"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/nimPeserta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewphoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nimPeserta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textview1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/namePeserta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/namePeserta"
        app:layout_constraintTop_toBottomOf="@+id/namePeserta" />

    <TextView
        android:id="@+id/phonePeserta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textview2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/nimPeserta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nimPeserta"
        app:layout_constraintTop_toBottomOf="@+id/nimPeserta" />

    <TextView
        android:id="@+id/department_idPeserta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textview3"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/phonePeserta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phonePeserta"
        app:layout_constraintTop_toBottomOf="@+id/phonePeserta" />

    <TextView
        android:id="@+id/textViewbirthplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/department_idPeserta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/department_idPeserta"
        app:layout_constraintTop_toBottomOf="@+id/department_idPeserta" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>